# otel-wrapper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docker-image.yml
deploy/: Dockerfile  docker-compose.yml
scripts/: automation_script.py  automation_script.sh
src/: checker.py  cli.py  otel_lib.py
