[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "otel-wrapper"
version = "0.1.0"
description = "A memory-safe OpenTelemetry metrics wrapper"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc"
]

[project.scripts]
otel-cli = "src.cli:main"
